--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>John Doe | Web Developer Portfolio</title>
+		<title>Alvin Ray Estiva | Web Developer Portfolio</title>
 
 		<!-- fonts -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -51,8 +51,8 @@
 		<div class="container-fluid">
 			<section class="jumbotron text-center mt-5" id="landing">
 				<h1>Full Stack Web Developer</h1>
-				<p>Hi! My name is John and I love building things from scratch.</p>
-				<img id="profile" src="images/me.png" class="img-fluid" />
+				<p>Hi! My name is Alvin and I love building things from scratch.</p>
+				<img id="profile" src="images/alvin.jpg" class="img-fluid" />
 			</section>
 			<!-- end landing -->
 
